Add recipe for edible cookie dough

--- a/recipes/edible-cookie-dough.html
+++ b/recipes/edible-cookie-dough.html
@@ -6,5 +6,44 @@
   </head>
   <body>
     <h1>Edible Cookie Dough</h1>
+    <img
+      src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F8753462.jpg"
+      alt="some delicious edible cookie dough in a cup"
+    />
+    <h2>Description</h2>
+    <p>
+      Cookie dough is fucking delicious, but sadly a forbidden fruit. You want
+      to eat it, but people tell you not to because you could "get salmonella."
+      Preposterous!
+    </p>
+    <p>
+      What are you to do? Make some edible cookie dough is what. Here's a recipe
+      for just that!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>3/4 cup packed brown sugar</li>
+      <li>1/2 cup butter</li>
+      <li>1 teaspoon vanilla extract</li>
+      <li>1/2 teaspoon salt</li>
+      <li>1 cup all-purpose flour</li>
+      <li>2 tablespoons milk</li>
+      <li>1/2 cup milk chocolate chips</li>
+      <li>1/2 cup mini chocolate chips</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li>Combine brown sugar and butter in a large bowl.</li>
+      <li>Beat with an electric mixer until creamy.</li>
+      <li>Beat in vanilla extract and salt.</li>
+      <li>Add flour; mix until a crumbly dough forms.</li>
+      <li>Mix in milk.</li>
+      <li>Fold in milk chocolate chips and mini chocolate chips.</li>
+    </ol>
+    <h3>
+      <a href="https://www.allrecipes.com/recipe/255365/edible-cookie-dough/"
+        >Original Recipe Source</a
+      >
+    </h3>
   </body>
 </html>
