--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/edible-cookie-dough.html">Edible Cookie Dough</a>
+    <ul>
+      <li>
+        <a href="./recipes/edible-cookie-dough.html">Edible Cookie Dough</a>
+      </li>
+      <li>
+        <a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
+      </li>
+    </ul>
   </body>
 </html>
