Add recipe for deep fried oreos

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <li>
         <a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a>
       </li>
+      <li>
+        <a href="recipes/deep-fried-oreos.html">Deep Fried Oreos</a>
+      </li>
     </ul>
   </body>
 </html>
